k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hiremate-prod
  labels:
    environment: production
