k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hiremate-backend-service
  namespace: hiremate-prod
spec:
  type: ClusterIP
  selector:
    app: hiremate-backend
  ports:
  - port: 5000
    targetPort: 5000
    name: http
